--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@standard-schema/spec": "^1.0.0",
     "@vueuse/nuxt": "^13.5.0",
     "better-sqlite3": "^12.2.0",
+    "chart.js": "^4.5.0",
     "nuxt": "^4.0.3",
     "nuxt-og-image": "^5.1.9",
     "zod": "^4.0.17"
