fix(ci): add test execution and build verification
- Replace individual lint/typecheck steps with `npm run check`
- Add `npm run build` to catch build-time errors
- Add timeouts: 10min for tests, 5min for build

This fixes a critical gap where 376 unit tests existed but were not running in CI,
creating a false sense of security that could hide breaking changes.

Fixes #Phase-1

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -24,8 +24,10 @@ jobs:
       - name: Install dependencies
         run: npm ci
 
-      - name: Lint
-        run: npm run lint
+      - name: Run all checks (lint + typecheck + test)
+        run: npm run check
+        timeout-minutes: 10
 
-      - name: Typecheck
-        run: npm run typecheck
+      - name: Build verification
+        run: npm run build
+        timeout-minutes: 5
