--- a/.gitignore
+++ b/.gitignore
@@ -9,6 +9,11 @@ dist
 # Test coverage
 coverage
 
+# Playwright
+test-results/
+playwright-report/
+playwright/.cache/
+
 # Node dependencies
 node_modules
 
