--- a/package.json
+++ b/package.json
@@ -16,6 +16,10 @@
     "test": "vitest",
     "test:ui": "vitest --ui",
     "test:coverage": "vitest --coverage",
+    "test:e2e": "playwright test",
+    "test:e2e:ui": "playwright test --ui",
+    "test:e2e:debug": "playwright test --debug",
+    "test:e2e:report": "playwright show-report",
     "check": "npm run lint && npm run typecheck && npm run test",
     "download-data": "tsx scripts/download-data.ts",
     "download-data:all": "tsx scripts/download-data.ts --all",
@@ -47,6 +51,7 @@
   },
   "devDependencies": {
     "@nuxt/eslint": "^1.5.2",
+    "@playwright/test": "^1.56.1",
     "@vitest/coverage-v8": "^4.0.3",
     "@vitest/ui": "^4.0.3",
     "@vue/test-utils": "^2.4.6",
