feat: integrate Sentry error tracking with Bugsink
- Install @sentry/node package
- Activate Sentry integration in errorTracking.ts
- Configure DSN for self-hosted Bugsink instance
- Enable error tracking in production mode only
- Tested successfully with 2 test events

Error tracking now live at https://sentry.mortality.watch
All production errors will be automatically captured and reported

--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@iconify-json/simple-icons": "^1.2.55",
     "@nuxt/image": "^1.10.0",
     "@nuxt/ui": "^v4.0.0-alpha.0",
+    "@sentry/node": "^10.22.0",
     "@standard-schema/spec": "^1.0.0",
     "@types/qrcode": "^1.5.6",
     "@vueform/slider": "^2.1.10",
