--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
     "@iconify-json/lucide": "^1.2.70",
     "@iconify-json/simple-icons": "^1.2.55",
     "@nuxt/image": "^1.10.0",
-    "@nuxt/ui": "^v4.0.0-alpha.0",
+    "@nuxt/ui": "^4.1.0",
     "@sentry/node": "^10.22.0",
     "@standard-schema/spec": "^1.0.0",
     "@stripe/stripe-js": "^8.1.0",
