feat: Add contact page and support email infrastructure
- Create contact form page with UForm
- Implement contact API endpoint with email sending
- Configure rate limiting (5 per hour per IP)
- Support email: support@mortality.watch
- Optional chart URL inclusion for bug reports

Closes: Phase 6.6

--- a/.env.example
+++ b/.env.example
@@ -23,6 +23,9 @@ EMAIL_HOST_PASSWORD=
 # Email from address (domain must be verified with Resend)
 EMAIL_FROM=Mortality Watch <noreply@mortality.watch>
 
+# Support email address for contact form submissions
+SUPPORT_EMAIL=support@mortality.watch
+
 # Sentry DSN for error tracking
 SENTRY_DSN=
 
