--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -3,7 +3,8 @@ name: ci
 on: push
 
 jobs:
-  ci:
+  # Run checks (lint + typecheck + test) in parallel with build
+  checks:
     runs-on: ${{ matrix.os }}
 
     strategy:
@@ -42,6 +43,41 @@ jobs:
             ${{ runner.os }}-eslint-${{ hashFiles('**/bun.lock') }}-
             ${{ runner.os }}-eslint-
 
+      - name: Run all checks (lint + typecheck + test)
+        run: bun run check
+        timeout-minutes: 10
+
+  # Run build verification in parallel with checks
+  build:
+    runs-on: ${{ matrix.os }}
+
+    strategy:
+      matrix:
+        os: [ubuntu-latest]
+        node: [22]
+
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v5
+
+      - name: Setup Bun
+        uses: oven-sh/setup-bun@v2
+        with:
+          bun-version: latest
+
+      - name: Cache node_modules
+        id: cache-node-modules
+        uses: actions/cache@v4
+        with:
+          path: node_modules
+          key: ${{ runner.os }}-bun-node-modules-${{ hashFiles('**/bun.lock') }}
+          restore-keys: |
+            ${{ runner.os }}-bun-node-modules-
+
+      - name: Install dependencies
+        if: steps.cache-node-modules.outputs.cache-hit != 'true'
+        run: bun install --frozen-lockfile
+
       - name: Cache Nuxt Build
         uses: actions/cache@v4
         with:
@@ -53,17 +89,14 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-nuxt-
 
-      - name: Run all checks (lint + typecheck + test)
-        run: bun run check
-        timeout-minutes: 10
-
       - name: Build verification
         run: bun run build
         timeout-minutes: 5
 
+  # E2E tests require both checks and build to pass
   e2e:
     runs-on: ${{ matrix.os }}
-    needs: ci
+    needs: [checks, build]
 
     strategy:
       matrix:
