--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -34,6 +34,9 @@ jobs:
         if: steps.cache-node-modules.outputs.cache-hit != 'true'
         run: bun install --frozen-lockfile
 
+      - name: Prepare Nuxt
+        run: bunx nuxt prepare
+
       - name: Cache ESLint
         uses: actions/cache@v4
         with:
