perf: optimize ESLint cache key to avoid hashing all source files
Before: Hashing all *.ts, *.vue, *.js files (~19s)
After: Only hash bun.lock and eslint config files (~instant)

ESLint's .eslintcache already tracks file changes internally.
Cache only needs invalidation when dependencies or config change.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -41,9 +41,8 @@ jobs:
         uses: actions/cache@v4
         with:
           path: .eslintcache
-          key: ${{ runner.os }}-eslint-${{ hashFiles('**/bun.lock') }}-${{ hashFiles('**/*.ts', '**/*.vue', '**/*.js', '.eslintrc.*') }}
+          key: ${{ runner.os }}-eslint-${{ hashFiles('**/bun.lock', 'eslint.config.*', '.eslintrc.*') }}
           restore-keys: |
-            ${{ runner.os }}-eslint-${{ hashFiles('**/bun.lock') }}-
             ${{ runner.os }}-eslint-
 
       - name: Run all checks (lint + typecheck + test)
