--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -49,9 +49,10 @@ jobs:
         run: bun run check
         timeout-minutes: 10
 
-  # Run build verification in parallel with checks
-  build:
+  # E2E tests require checks to pass
+  e2e:
     runs-on: ${{ matrix.os }}
+    needs: checks
 
     strategy:
       matrix:
@@ -91,56 +92,6 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-nuxt-
 
-      - name: Build verification
-        run: bun run build
-        timeout-minutes: 5
-
-  # E2E tests require both checks and build to pass
-  e2e:
-    runs-on: ${{ matrix.os }}
-    needs: [checks, build]
-
-    strategy:
-      matrix:
-        os: [ubuntu-latest]
-        node: [22]
-
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v5
-
-      - name: Setup Bun
-        uses: oven-sh/setup-bun@v2
-        with:
-          bun-version: latest
-
-      - name: Cache node_modules
-        id: cache-node-modules
-        uses: actions/cache@v4
-        with:
-          path: node_modules
-          key: ${{ runner.os }}-bun-node-modules-${{ hashFiles('**/bun.lock') }}
-          restore-keys: |
-            ${{ runner.os }}-bun-node-modules-
-
-      - name: Install dependencies
-        if: steps.cache-node-modules.outputs.cache-hit != 'true'
-        run: bun install --frozen-lockfile
-
-      - name: Cache Nuxt Build
-        uses: actions/cache@v4
-        id: nuxt-build-cache
-        with:
-          path: |
-            .nuxt
-            .output
-            node_modules/.cache
-          key: ${{ runner.os }}-nuxt-e2e-${{ hashFiles('**/bun.lock') }}
-          restore-keys: |
-            ${{ runner.os }}-nuxt-${{ hashFiles('**/bun.lock') }}
-            ${{ runner.os }}-nuxt-e2e-
-            ${{ runner.os }}-nuxt-
-
       - name: Cache Playwright Browsers
         uses: actions/cache@v4
         id: playwright-cache
@@ -157,29 +108,10 @@ jobs:
           mkdir -p .data
           bun run db:migrate
           bunx tsx scripts/seed-test-user.ts
-          echo "Database created, checking tables:"
-          sqlite3 .data/mortality.db ".tables"
-          echo "Checking test user exists:"
-          sqlite3 .data/mortality.db "SELECT email FROM users WHERE email = 'pro@mortality.watch';"
-          echo "Database file size:"
-          ls -lh .data/mortality.db
 
       - name: Build for E2E tests
-        if: steps.nuxt-build-cache.outputs.cache-hit != 'true'
         run: bun run build
         timeout-minutes: 5
-
-      - name: Verify database after build
-        run: |
-          echo "Checking if database still exists after build:"
-          if [ -f .data/mortality.db ]; then
-            echo "Database exists, size:"
-            ls -lh .data/mortality.db
-            echo "Tables:"
-            sqlite3 .data/mortality.db ".tables"
-          else
-            echo "ERROR: Database was deleted during build!"
-          fi
 
       - name: Run E2E tests
         env:
