--- a/package.json
+++ b/package.json
@@ -66,6 +66,7 @@
     "i18n-iso-countries": "^7.14.0",
     "jsonwebtoken": "^9.0.3",
     "nuxt": "^4.2.2",
+    "nuxt-auth-utils": "^0.5.26",
     "nuxt-og-image": "^5.1.13",
     "nuxt-umami": "^3.2.1",
     "papaparse": "^5.5.3",
