--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "lint:fix": "eslint . --fix --cache --cache-location .eslintcache",
     "format": "eslint . --fix",
     "typecheck": "nuxt typecheck",
-    "test": "vitest",
+    "test": "vitest run",
+    "test:watch": "vitest",
     "test:ui": "vitest --ui",
     "test:coverage": "vitest --coverage",
     "test:e2e": "playwright test",
