--- a/.env.example
+++ b/.env.example
@@ -34,6 +34,12 @@ SUPPORT_EMAIL=mortalitywatch@proton.me
 # Sentry DSN for error tracking
 SENTRY_DSN=
 
+# Umami Analytics
+# Get the website ID from your Umami dashboard after adding the site
+NUXT_UMAMI_ID=
+# Umami host URL (defaults to https://ua.mortality.watch)
+NUXT_UMAMI_HOST=https://ua.mortality.watch
+
 # Stripe API keys
 # Get from https://dashboard.stripe.com/apikeys
 # Use test keys (pk_test_... and sk_test_...) for development
