--- a/package.json
+++ b/package.json
@@ -67,6 +67,7 @@
     "jsonwebtoken": "^9.0.3",
     "nuxt": "^4.2.2",
     "nuxt-og-image": "^5.1.13",
+    "nuxt-umami": "^3.2.1",
     "papaparse": "^5.5.3",
     "qrcode": "^1.5.4",
     "resend": "^6.6.0",
