--- a/.env.example
+++ b/.env.example
@@ -37,8 +37,8 @@ SENTRY_DSN=
 # Umami Analytics
 # Get the website ID from your Umami dashboard after adding the site
 NUXT_UMAMI_ID=
-# Umami host URL (defaults to https://ua.mortality.watch)
-NUXT_UMAMI_HOST=https://ua.mortality.watch
+# Umami host URL
+NUXT_UMAMI_HOST=https://ua.e7ad.cc
 
 # Stripe API keys
 # Get from https://dashboard.stripe.com/apikeys
