--- a/.env.example
+++ b/.env.example
@@ -37,7 +37,7 @@ SENTRY_DSN=
 # Umami Analytics
 # Get the website ID from your Umami dashboard after adding the site
 NUXT_UMAMI_ID=
-# Umami host URL
+# Umami host URL (defaults to https://ua.e7ad.cc)
 NUXT_UMAMI_HOST=https://ua.e7ad.cc
 
 # Stripe API keys
